# boilerai

./: .env.example  .env.production  .gitignore  AI_CLEANUP_SUMMARY.md  AI_CONTEXT.md  AI_ENHANCEMENT_COMPLETE.md  AI_KNOWLEDGE_BASE_ENHANCEMENT_COMPLETE.md  AI_KNOWLEDGE_INTEGRATION_SUMMARY.md  AI_SETUP.md  ANTI_LOOPING_IMPLEMENTATION.md  API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTH_STRUCTURE.md  BOILERAI_INTEGRATION_GUIDE.md  BOILERAI_QUICK_START.md  BOILER_AI_TECHNICAL_DOCUMENTATION.md  CLADO_INTEGRATION.md  CLADO_INTEGRATION_COMPLETE.md  CLI_AI_INTEGRATION_SETUP.md  CODO_VALIDATION_README.md  COURSE_DETAILS_README.md  DATA_COLLECTION.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile  ELO_SYSTEM_IMPLEMENTATION.md  EMAIL_PRODUCTION_SETUP.md  EMAIL_SETUP.md  EMAIL_VERIFICATION_READY.md  ENHANCED_BOILERAI_IMPLEMENTATION_SUMMARY.md  FRONTEND_BACKEND_CONNECTION_FIX.md  FRONTEND_BACKEND_FIXES.md  GEMINI_API_SETUP.md  GMAIL_SETUP_GUIDE.md  INTEGRATION_COMPLETE.md  INTEGRATION_TEST_RESULTS.md  INTELLIGENT_CONTEXT_SYSTEM_COMPLETE.md  KNOWLEDGE_BASE_DOCUMENTATION.md  LOGO_INTEGRATION_COMPLETE.md  (+181 more)
.claude/: settings.local.json
advisor/: __init__.py  codo_evaluator.py  contextual_advisor.py  memory.py  prompts.py  recommendation_evaluator.py  smart_progression_service.py  track_intelligent_advisor.py  transcript_aware_advisor.py
api_gateway/: db.py  llm_client.py  main.py  requirements.txt  smartcourse_handler.py  t2sql_generator.py
app/: __init__.py  globals.css  layout.tsx  main.py  next.config.js  package-lock.json  package.json  page.tsx  tailwind.config.js
(+516 files in other folders)
